--- a/strings/command.yml
+++ b/strings/command.yml
@@ -1,10 +1,10 @@
-PING_COMMAND : ["ping", "alive"]
+PING_COMMAND : ["mping", "malive"]
 START_COMMAND : ["start", "mstart"]
 HELP_COMMAND : ["help"]
 SETTINGS_COMMAND : ["settings", "setting"]
-RELOAD_COMMAND : ["admincache", "reload"]
+RELOAD_COMMAND : ["admincache", "mreload"]
 GSTATS_COMMAND : ["gstats", "globalstats"]
-STATS_COMMAND : ["stats"]
+STATS_COMMAND : ["mstats"]
 LANGUAGE_COMMAND : ["langchangexd"]
 PLAY_COMMAND : ["play", "vplay", "cplay", "cvplay", "playforce", "vplayforce", "cplayforce", "cvplayforce"]
 PLAYMODE_COMMAND : ["playmode", "mode"]
@@ -26,9 +26,9 @@ SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["reboot"]
-ADDSUDO_COMMAND : ["addsudo", "addrandi", "randi"]
-DELSUDO_COMMAND : ["delsudo", "rmsudo", "bsdk", "bhakkbsdk"]
-SUDOUSERS_COMMAND : ["sudolist", "listsudo", "sudoers", "sudo"]
+ADDSUDO_COMMAND : ["maddsudo", "addrandi", "randi"]
+DELSUDO_COMMAND : ["mdelsudo", "rmsudo", "bsdk", "bhakkbsdk"]
+SUDOUSERS_COMMAND : ["msudolist", "mlistsudo", "sudoers", "sudo"]
 BROADCAST_COMMAND : ["broadcast", "gcast"]
 BLACKLISTCHAT_COMMAND : ["blacklistchat", "blchat"]
 WHITELISTCHAT_COMMAND : ["whitelistchat", "unblchat", "wlchat"]
@@ -43,8 +43,8 @@ DELVAR_COMMAND : ["del_var", "delvar"]
 SETVAR_COMMAND : ["set_var", "setvar", "addvar"]
 USAGE_COMMAND : ["usage"]
 VARS_COMMAND : ["vars", "config"]
-UPDATE_COMMAND : ["update", "gitpull"]
-REBOOT_COMMAND : ["restart"]
+UPDATE_COMMAND : ["mupdate", "gitpull"]
+REBOOT_COMMAND : ["mrestart"]
 AUTOEND_COMMAND : ["autoend"]
 AUTHORIZE_COMMAND : ["authorize"]
 UNAUTHORIZE_COMMAND : ["unauthorize"]
@@ -55,6 +55,6 @@ BLOCKED_COMMAND : ["blockedusers", "blocked", "blusers"]
 SPEEDTEST_COMMAND : ["speedtest", "spt"]
 ACTIVEVC_COMMAND : ["activevoice", "activevc"]
 ACTIVEVIDEO_COMMAND : ["activevideo", "activev"]
-GBAN_COMMAND : ["gban", "gandban", "gandfaadban", "globalban"]
-UNGBAN_COMMAND : ["ungban", "gandback", "globalunban"]
+GBAN_COMMAND : ["mgban", "gandban", "gandfaadban", "globalban"]
+UNGBAN_COMMAND : ["mungban", "gandback", "globalunban"]
 GBANNED_COMMAND : ["gbannedusers", "gbanlist", "gbanned"]
