--- a/strings/command.yml
+++ b/strings/command.yml
@@ -25,7 +25,10 @@ SKIP_COMMAND : ["skip", "cskip"]
 SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
-RESTART_COMMAND : ["reboot"]
+RESTART_COMMAND : ["reboot"] 
+MUTE_COMMAND : ["mute", "cmute"]
+
+UNMUTE_COMMAND : ["unmute", "cunmute"]
 ADDSUDO_COMMAND : ["maddsudo", "addrandi", "randi"]
 DELSUDO_COMMAND : ["mdelsudo", "rmsudo", "bsdk", "bhakkbsdk"]
 SUDOUSERS_COMMAND : ["msudolist", "mlistsudo", "sudoers", "sudo"]
