--- a/strings/command.yml
+++ b/strings/command.yml
@@ -26,7 +26,7 @@ SHUFFLE_COMMAND : ["shuffle", "cshuffle"]
 LOOP_COMMAND : ["loop", "cloop"]
 SEEK_COMMAND : ["seek", "cseek", "seekback", "cseekback"]
 RESTART_COMMAND : ["reboot"] 
-MUTE_COMMAND : ["mute", "cmute"]
+MUTE_COMMAND : ["xmute", "cmute"]
 UNMUTE_COMMAND : ["unmute", "cunmute"]
 ADDSUDO_COMMAND : ["maddsudo", "addrandi", "randi"]
 DELSUDO_COMMAND : ["mdelsudo", "rmsudo", "bsdk", "bhakkbsdk"]
